--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 
 #logging.level.org.springframework = debug
+
+# To avoid the trace variable in the default error response 
+server.error.include-stacktrace = NEVER
