Internationalization resource bundle & content negotiation changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@
 
 # To avoid the trace variable in the default error response 
 server.error.include-stacktrace = NEVER
+
+# base name for resource bundles
+spring.messages.basename=ResourceMessages
