spring actuator changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ server.error.include-stacktrace = NEVER
 
 # base name for resource bundles
 spring.messages.basename=ResourceMessages
+
+#to include all acutuator endpoints
+management.endpoints.web.exposure.include=*
