static and dynamic bean filtering

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+#logging
 logging.level.org.springframework = info
 
 # To avoid the trace variable in the default error response 
@@ -9,3 +9,4 @@ spring.messages.basename=ResourceMessages
 
 #to include all acutuator endpoints
 management.endpoints.web.exposure.include=*
+
