--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
     		<artifactId>jackson-dataformat-xml</artifactId>
     	</dependency>  -->
     	
+    	<dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
 		<dependency>
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-actuator</artifactId>
