--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.messages.basename=ResourceMessages
 #to include all acutuator endpoints
 management.endpoints.web.exposure.include=*
 
+#spring security
+spring.security.user.name=user
+spring.security.user.password=user123
+spring.security.user.roles=manager
