--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ management.endpoints.web.exposure.include=*
 spring.security.user.name=user
 spring.security.user.password=user123
 spring.security.user.roles=manager
+
+#H2 JPA
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.data.jpa.repositories.bootstrap-mode=default
